--- a/src/components/LikeButton.astro
+++ b/src/components/LikeButton.astro
@@ -8,13 +8,12 @@ type Props = {
 const { postSlug } = Astro.props;
 ---
 
-<like-button
-  data-target={$("container")}
+<RootElement
   data-post-slug={postSlug}
   class="group/like flex items-center gap-4"
 >
   <button
-    data-target={$("button")}
+    data-target="button"
     data-action="click:like-button#toggleLike"
     class="w-[2.5em] h-[2.5em] bg-gradient-to-br from-slate-600 to-slate-900 rounded-full flex items-center justify-center"
   >
@@ -32,21 +31,20 @@ const { postSlug } = Astro.props;
     </div>
   </button>
   <p
-    data-target={$("text")}
-    data-target="like-button.text"
+    data-target="text"
     class="group-data-[pending]/like:opacity-60 transition-opacity"
   >
     -
   </p>
-</like-button>
+</RootElement>
 
 <script>
   import { actions } from "astro:actions";
   import { Signal } from "signal-polyfill";
   import { effect } from "~/lib/effect";
 
-  $.ready(async () => {
-    const postSlug = $("container").getAttribute("data-post-slug") ?? "";
+  RootElement.ready(async ($) => {
+    const postSlug = $.self.getAttribute("data-post-slug") ?? "";
     const pending = new Signal.State(false);
     const liked = new Signal.State(
       Boolean(localStorage.getItem(`isLike:${postSlug}`))
@@ -56,8 +54,8 @@ const { postSlug } = Astro.props;
     $("text").textContent = likes.toString();
 
     effect(() => {
-      $("container").toggleAttribute("data-liked", liked.get());
-      $("container").toggleAttribute("data-pending", pending.get());
+      $.self.toggleAttribute("data-liked", liked.get());
+      $.self.toggleAttribute("data-pending", pending.get());
 
       if (liked.get()) {
         localStorage.setItem(`isLike:${postSlug}`, "true");
