--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -32,11 +32,7 @@ function isMatch(urlPath: string, linkPath: string) {
 }
 ---
 
-<div
-  data-open
-  data-target={$("container")}
-  class="group block sticky z-40 top-0"
->
+<RootElement data-open data-container class="group block sticky z-40 top-0">
   <nav
     class="max-w-[80ch] mx-auto flex gap-6 items-center text-lg py-2 px-3 sm:py-3"
   >
@@ -100,7 +96,7 @@ function isMatch(urlPath: string, linkPath: string) {
     <div>
       <button
         transition:name="nav-toggle"
-        data-target={$("btn")}
+        data-target="btn"
         class="h-[20px] w-[25px] flex flex-col justify-between relative bg-transparent before:absolute before:-inset-1 before:-z-10 before:rounded-md"
         aria-controls={id}
         aria-label="Toggle menu"
@@ -120,7 +116,7 @@ function isMatch(urlPath: string, linkPath: string) {
       </button>
     </div>
   </nav>
-</div>
+</RootElement>
 
 <script>
   import { effect } from "~/lib/effect";
@@ -128,7 +124,7 @@ function isMatch(urlPath: string, linkPath: string) {
 
   const open = new Signal.State(false);
 
-  $.ready(() => {
+  RootElement.ready(($) => {
     let scrollY = 0;
     let ticking = false;
     const abort = new AbortController();
@@ -138,7 +134,7 @@ function isMatch(urlPath: string, linkPath: string) {
     });
 
     effect(() => {
-      $("container").toggleAttribute("data-open", open.get());
+      $.self.toggleAttribute("data-open", open.get());
       $("btn").toggleAttribute("aria-expanded", open.get());
     });
 
@@ -201,7 +197,7 @@ function isMatch(urlPath: string, linkPath: string) {
     transition-delay: calc((4 - var(--idx)) * 50ms);
   }
 
-  [data-target^="container"]:before {
+  [data-container]:before {
     --bg: var(--color-gray-950);
     content: "";
     position: absolute;
