--- a/src/components/TOC.astro
+++ b/src/components/TOC.astro
@@ -10,10 +10,10 @@ type Props = {
 const { headings } = Astro.props;
 ---
 
-<div class="z-10" data-target={$("container")}>
+<RootElement class="z-10 block">
   <div class="panel bg-gray-950">
     <div class="progress-container">
-      <progress data-target={$("progress")} max="1"></progress>
+      <progress data-target="progress" max="1"></progress>
       <Icon class="done" name="check" />
     </div>
     <ul class="p-3 sm:p-5 pb-3" id={scope("panel")} role="list">
@@ -23,7 +23,7 @@ const { headings } = Astro.props;
           .map((h) => (
             <li class="my-2 text-ellipsis whitespace-nowrap overflow-hidden text-sm">
               <a
-                data-target={$("links")}
+                data-target="links"
                 class="data-[active]:text-primary-light"
                 href={`#${h.slug}`}
               >
@@ -35,7 +35,7 @@ const { headings } = Astro.props;
     </ul>
   </div>
   <button
-    data-target={$("btn")}
+    data-target="btn"
     aria-controls={scope("panel")}
     class="transition-all ease-spring-3 duration-500"
   >
@@ -47,21 +47,21 @@ const { headings } = Astro.props;
       </div>
     </div>
   </button>
-</div>
+</RootElement>
 
 <script>
   import { progress, currentSectionIdx } from "~/stores";
   import { effect } from "~/lib/effect";
   import { Signal } from "signal-polyfill";
 
-  $.ready(() => {
+  RootElement.ready(($) => {
     const open = new Signal.State(false);
 
     effect(() => {
-      $("container").toggleAttribute("data-open", open.get());
+      $.self.toggleAttribute("data-open", open.get());
       $<HTMLProgressElement>("progress").value = progress.get();
 
-      $("container").toggleAttribute(
+      $.self.toggleAttribute(
         "data-done-reading",
         Math.round(progress.get() * 10) / 10 >= 1
       );
