--- a/src/components/heading/Heading.astro
+++ b/src/components/heading/Heading.astro
@@ -2,12 +2,13 @@
 import { Icon } from "astro-icon/components";
 import Whiteboard from "./Whiteboard.astro";
 import WhiteboardContext from "./WhiteboardContext.astro";
+import type { scope } from "simple:scope";
 ---
 
 <WhiteboardContext>
   {
-    ($context: typeof $) => (
-      <div class="pt-16 mb-32 relative">
+    ($scope: typeof scope) => (
+      <RootElement class="pt-16 mb-32 relative block">
         <div class="inset-0 absolute sm:bottom-[30%] bottom-[50%] bg-gray-900 -z-10">
           <svg
             class="absolute -bottom-8 left-0 right-0 w-full h-8 text-gray-900 -z-10"
@@ -50,7 +51,7 @@ import WhiteboardContext from "./WhiteboardContext.astro";
               class="cursor-pointer group/btn active:scale-y-95 active:translate-y-1 font-bold rounded-2xl pb-2 px-1 no-underline text-xl sm:animate-[shine_4s_500ms_ease-in-out_infinite] animate-[shine_4s_1s_ease-in-out_infinite]"
               is="button"
               href="#videos"
-              data-target={$("scroll-trigger")}
+              data-target="scroll-trigger"
               data-watch-btn
             >
               <span class="group-active/btn:scale-105 group-active/btn:rounded-2xl group-active/btn:scale-y-110 origin-top rounded-xl px-8 py-3 flex items-center justify-center gap-4">
@@ -60,7 +61,7 @@ import WhiteboardContext from "./WhiteboardContext.astro";
             <button
               class="group/btn disabled:brightness-[80%] disabled:scale-y-95 disabled:translate-y-1 font-bold rounded-2xl pb-2 px-1 no-underline text-xl sm:animate-[shine_4s_1s_ease-in-out_infinite] animate-[shine_4s_500ms_ease-in-out_infinite]"
               data-draw-btn
-              data-target={$context("draw-trigger")}
+              data-target={$scope("draw-trigger")}
             >
               <span class="group-disabled/btn:scale-105 group-disabled/btn:rounded-2xl group-disabled/btn:scale-y-110 origin-top rounded-xl px-8 py-3 flex items-center justify-center gap-4">
                 Draw <Icon name="draw" class="mb-[2px]" />
@@ -71,7 +72,7 @@ import WhiteboardContext from "./WhiteboardContext.astro";
             style="grid-area: whiteboard"
             class="place-self-center sm:min-w-56 mr-[-30%] relative group-[[data-drawing]]:z-30 group-[[data-drawing]]:fixed sm:relative! group-[[data-drawing]]:mr-0 group-[[data-drawing]]:top-4 group-[[data-drawing]]:left-4 sm:top-0! sm:left-0! sm:mr-auto"
           >
-            <Whiteboard {$context} />
+            <Whiteboard {$scope} />
             <div class="group-[[data-drawing]]:opacity-0 transition-opacity absolute bottom-[10%] sm:right-[50%] right-[90%] -z-10 w-full overflow-hidden">
               <div class="absolute z-10 top-0 left-0 w-[50%] h-full bg-gradient-to-r from-gray-950 to-transparent" />
               <svg
@@ -90,13 +91,13 @@ import WhiteboardContext from "./WhiteboardContext.astro";
             </div>
           </div>
         </div>
-      </div>
+      </RootElement>
     )
   }
 </WhiteboardContext>
 
 <script>
-  $.ready(() => {
+  RootElement.ready(($) => {
     $("scroll-trigger").addEventListener("click", (e) => {
       e.preventDefault();
       document
