--- a/src/components/iBen/Frame.astro
+++ b/src/components/iBen/Frame.astro
@@ -4,6 +4,7 @@ import Button from "./Button.astro";
 import CdDrive from "./CdDrive.astro";
 import { getImgSrc, showcaseVideo } from "./Frame";
 import { Icon } from "astro-icon/components";
+import { scope } from "simple:scope";
 
 const showcaseSrc = getImgSrc(showcaseVideo);
 ---
@@ -22,7 +23,7 @@ const showcaseSrc = getImgSrc(showcaseVideo);
     > for practical examples, diagrams, and 60 second explainers.
   </p>
 </div>
-<div id="videos" class="block sm:px-6 -mx-3" data-target={$("container")}>
+<RootElement id="videos" class="block sm:px-6 -mx-3">
   <div data-container class="py-8 max-w-prose mx-auto grid relative">
     <img
       data-glow
@@ -34,7 +35,7 @@ const showcaseSrc = getImgSrc(showcaseVideo);
     <div class="w-[89%] mt-[8.5%] mx-[5.5%] bg-slate-950 relative">
       <img
         data-thumbnail
-        data-target={$("thumbnail")}
+        data-target="thumbnail"
         src={showcaseSrc}
         alt="A gud video"
         class="absolute top-0 w-full aspect-[3/2] leading-none object-cover"
@@ -57,7 +58,7 @@ const showcaseSrc = getImgSrc(showcaseVideo);
         </div>
       </div>
 
-      <template data-target={$("iframe-template")}>
+      <template data-target="iframe-template">
         <iframe
           class="absolute top-0 w-full aspect-[3/2] h-auto"
           width="560"
@@ -75,20 +76,20 @@ const showcaseSrc = getImgSrc(showcaseVideo);
     />
     <div
       data-btn-overlay
-      data-target={$("cd-drive")}
+      data-target="cd-drive"
       class="absolute left-0 right-0 z-20 flex justify-between items-end px-[5%] h-[13%]"
     >
-      <Button data-target={$("play")} icon="play" aria-label="Play video" />
+      <Button data-target={scope("play")} icon="play" aria-label="Play video" />
 
       <CdDrive />
       <Button
-        data-target={$("random")}
+        data-target={scope("random")}
         icon="random"
         aria-label="Get random video"
       />
     </div>
   </div>
-</div>
+</RootElement>
 
 <script>
   import { getEmbedSrc, getImgSrc, videoIds, showcaseVideo } from "./Frame";
@@ -102,15 +103,15 @@ const showcaseSrc = getImgSrc(showcaseVideo);
 
   const [_showcase, ...otherVideos] = videoIds;
 
-  $.ready(async () => {
+  RootElement.ready(async ($) => {
     const playing = new Signal.State(false);
     const welcome = new Signal.State(false);
     const videoIdx = new Signal.State(0);
     const videoIds = [showcaseVideo, ...fisherYatesShuffle(otherVideos)];
 
     effect(() => {
-      $("container").toggleAttribute("data-playing", playing.get());
-      $("container").toggleAttribute("data-welcome", welcome.get());
+      $.self.toggleAttribute("data-playing", playing.get());
+      $.self.toggleAttribute("data-welcome", welcome.get());
 
       if (playing.get()) {
         const iframe = showTemplate($("iframe-template")) as HTMLIFrameElement;
