--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -85,11 +85,10 @@ const {
       }
     </style>
     <script>
-      import { effect } from "~/lib/effect";
       import { isDrawing } from "~/stores";
       import { Signal } from "signal-polyfill";
 
-      RootElement.ready(($) => {
+      RootElement.ready(($, ctx) => {
         const smBreakpointMatches = new Signal.State(
           window.matchMedia("(min-width: 640px)").matches
         );
@@ -97,7 +96,7 @@ const {
           smBreakpointMatches.set(matches);
         };
 
-        effect(() => {
+        ctx.effect(() => {
           $.self.toggleAttribute(
             "data-visible",
             isDrawing.get() && !smBreakpointMatches.get()
