fix: article scroll jammed as 100%

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -33,7 +33,7 @@ const { Content, headings } = await post.render();
   image={post.data.image}
 >
   <main class="max-w-prose mx-auto px-3 mb-24">
-    <RootElement>
+    <RootElement class="block">
       {
         post.data.image && (
           <div class="aspect-video w-full overflow-hidden flex items-end rounded-lg">
