--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -40,8 +40,8 @@ const {
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="630" />
         <meta property="og:site_name" content="Ben Holmes" />
-        <meta property="og:title" />
-        <meta property="og:description" />
+        <meta property="og:title" content={title} />
+        <meta property="og:description" content={description} />
         <link rel="icon" type="image/png" href="/favicon.png" />
         <ViewTransitions fallback="none" />
         <Font />
