--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,6 +19,8 @@ const {
     headings,
     image = await getImage({ src: import("~/assets/bholmesdev.png") }),
 } = Astro.props;
+
+const ogImage = new URL(image.src, Astro.site).href;
 ---
 
 <!doctype html>
@@ -32,11 +34,11 @@ const {
         <meta name="twitter:creator" content="@bholmesdev" />
         <meta name="twitter:title" content={title} />
         <meta name="twitter:description" content={description} />
-        <meta name="twitter:image" content={image.src} />
+        <meta name="twitter:image" content={ogImage} />
 
         <meta name="description" content={description} />
         <meta property="og:url" content={Astro.url} />
-        <meta property="og:image" content={image.src} />
+        <meta property="og:image" content={ogImage} />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="630" />
         <meta property="og:site_name" content="Ben Holmes" />
