--- a/src/layouts/tailwind.css
+++ b/src/layouts/tailwind.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @theme {
   --font-family-heading: var(--font-family-heading);
@@ -13,7 +13,7 @@
 
   --width-prose: 60ch;
 
-  --font-size-sm: clamp(0.85rem, 0.17vw + 0.76rem, 0.89rem);
+  --font-size-sm: clamp(0.91rem, 0.24vw + 0.83rem, 1rem);
   --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
   --font-size-lg: clamp(1.12rem, 0.5vw + 1rem, 1.3rem);
   --font-size-xl: clamp(1.4rem, 0.61vw + 1.1rem, 1.58rem);
@@ -27,7 +27,11 @@
 
   --color-marker-red: #ff0000;
   --color-marker-blue: #0034ff;
-  --color-marker-blue-light: color-mix(in srgb, var(--color-marker-blue), white 20%);
+  --color-marker-blue-light: color-mix(
+    in srgb,
+    var(--color-marker-blue),
+    white 20%
+  );
   --color-marker-green: var(--color-green-600);
 
   --color-primary: #6200ff;
