--- a/src/components/iBen/Button.astro
+++ b/src/components/iBen/Button.astro
@@ -84,8 +84,8 @@ const { icon, ...btnAttrs } = Astro.props;
   .face,
   .back {
     transition:
-      filter var(--transition-timing-function-in-out) 0.2s,
-      transform var(--transition-timing-function-spring-5) 0.5s;
+      filter var(--ease-in-out) 0.2s,
+      transform var(--ease-spring-5) 0.5s;
   }
   svg {
     width: 100%;
