--- a/src/components/iBen/Frame.astro
+++ b/src/components/iBen/Frame.astro
@@ -13,14 +13,14 @@ const showcaseSrc = getImgSrc(showcaseVideo);
   <h2 class="text-5xl sm:text-7xl mb-4 font-heading">
     I make <span class="text-cyan-300 font-bold">videos</span>
   </h2>
-  <p class="text-slate-400 text-xl leading-9">
-    About the hardest parts of web dev. <strong
+  <p class="text-slate-400 text-lg px-2">
+    <strong
       class="text-slate-50 animate-pulse"
       ><a
         class="text-cyan-300"
         href="https://youtube.com/@bholmesdev?sub_confirmation=1">Subscribe</a
       ></strong
-    > for practical examples, diagrams, and 60 second explainers.
+    > for weekly content on the hardest parts of web dev.
   </p>
 </div>
 <RootElement id="videos" class="block sm:px-6 -mx-3">
