--- a/src/components/TOC.astro
+++ b/src/components/TOC.astro
@@ -163,7 +163,7 @@ const { headings } = Astro.props;
   @supports (transition-timing-function: linear(1, 1)) {
     .panel {
       transition:
-        rotate 0.8s var(--transition-timing-function-spring-5),
+        rotate 0.8s var(--ease-spring-5),
         visibility 0.8s,
         scale 0.2s;
     }
