--- a/src/layouts/tailwind.css
+++ b/src/layouts/tailwind.css
@@ -4,26 +4,134 @@
   --font-heading: var(--font-family-heading);
   --font-sans: var(--font-family-sans);
 
-  /* Default theme: https://github.com/tailwindlabs/tailwindcss/blob/next/packages/tailwindcss/theme.css */
-  --transition-timing-function-spring-1: cubic-bezier(0, 1.49, 0.38, 0.86);
-  --transition-timing-function-spring-2: cubic-bezier(0.02, 1.63, 0.39, 0.81);
-  --transition-timing-function-spring-3: cubic-bezier(0.02, 1.72, 0.43, 0.79);
-  --transition-timing-function-spring-4: cubic-bezier(0.01, 1.8, 0.41, 0.76);
-  --transition-timing-function-spring-5: cubic-bezier(0.01, 1.9, 0.41, 0.76);
+  --ease-spring-1: linear(
+    0,
+    0.006,
+    0.025 2.8%,
+    0.101 6.1%,
+    0.539 18.9%,
+    0.721 25.3%,
+    0.849 31.5%,
+    0.937 38.1%,
+    0.968 41.8%,
+    0.991 45.7%,
+    1.006 50.1%,
+    1.015 55%,
+    1.017 63.9%,
+    1.001
+  );
+  --ease-spring-2: linear(
+    0,
+    0.007,
+    0.029 2.2%,
+    0.118 4.7%,
+    0.625 14.4%,
+    0.826 19%,
+    0.902,
+    0.962,
+    1.008 26.1%,
+    1.041 28.7%,
+    1.064 32.1%,
+    1.07 36%,
+    1.061 40.5%,
+    1.015 53.4%,
+    0.999 61.6%,
+    0.995 71.2%,
+    1
+  );
+  --ease-spring-3: linear(
+    0,
+    0.009,
+    0.035 2.1%,
+    0.141 4.4%,
+    0.723 12.9%,
+    0.938 16.7%,
+    1.017,
+    1.077,
+    1.121,
+    1.149 24.3%,
+    1.159,
+    1.163,
+    1.161,
+    1.154 29.9%,
+    1.129 32.8%,
+    1.051 39.6%,
+    1.017 43.1%,
+    0.991,
+    0.977 51%,
+    0.974 53.8%,
+    0.975 57.1%,
+    0.997 69.8%,
+    1.003 76.9%,
+    1
+  );
+  --ease-spring-4: linear(
+    0,
+    0.009,
+    0.037 1.7%,
+    0.153 3.6%,
+    0.776 10.3%,
+    1.001,
+    1.142 16%,
+    1.185,
+    1.209 19%,
+    1.215 19.9% 20.8%,
+    1.199,
+    1.165 25%,
+    1.056 30.3%,
+    1.008 33%,
+    0.973,
+    0.955 39.2%,
+    0.953 41.1%,
+    0.957 43.3%,
+    0.998 53.3%,
+    1.009 59.1% 63.7%,
+    0.998 78.9%,
+    1
+  );
+  --ease-spring-5: linear(
+    0,
+    0.01,
+    0.04 1.6%,
+    0.161 3.3%,
+    0.816 9.4%,
+    1.046,
+    1.189 14.4%,
+    1.231,
+    1.254 17%,
+    1.259,
+    1.257 18.6%,
+    1.236,
+    1.194 22.3%,
+    1.057 27%,
+    0.999 29.4%,
+    0.955 32.1%,
+    0.942,
+    0.935 34.9%,
+    0.933,
+    0.939 38.4%,
+    1 47.3%,
+    1.011,
+    1.017 52.6%,
+    1.016 56.4%,
+    1 65.2%,
+    0.996 70.2%,
+    1.001 87.2%,
+    1
+  );
 
   --width-prose: 60ch;
 
-  --font-size-sm: clamp(0.91rem, 0.24vw + 0.83rem, 1rem);
-  --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
-  --font-size-lg: clamp(1.12rem, 0.5vw + 1rem, 1.3rem);
-  --font-size-xl: clamp(1.4rem, 0.61vw + 1.1rem, 1.58rem);
-  --font-size-2xl: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
-  --font-size-3xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
-  --font-size-4xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
-  --font-size-5xl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
-  --font-size-7xl: clamp(5.2rem, 3.94vw + 3.75rem, 6.4rem);
-  --font-size-8xl: clamp(5.8rem, 4.14vw + 4.05rem, 7.2rem);
-  --font-size-9xl: clamp(6.55rem, 4.34vw + 4.55rem, 8rem);
+  --text-sm: clamp(0.91rem, 0.24vw + 0.83rem, 1rem);
+  --text-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
+  --text-lg: clamp(1.12rem, 0.5vw + 1rem, 1.3rem);
+  --text-xl: clamp(1.4rem, 0.61vw + 1.1rem, 1.58rem);
+  --text-2xl: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
+  --text-3xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
+  --text-4xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
+  --text-5xl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
+  --text-7xl: clamp(5.2rem, 3.94vw + 3.75rem, 6.4rem);
+  --text-8xl: clamp(5.8rem, 4.14vw + 4.05rem, 7.2rem);
 
   --color-marker-red: #ff0000;
   --color-marker-blue: #0034ff;
@@ -36,14 +144,4 @@
 
   --color-primary: #6200ff;
   --color-primary-light: #a08aff;
-}
-
-@supports (transition-timing-function: linear(1, 1)) {
-  :root {
-    --transition-timing-function-spring-1: var(--ease-spring-1);
-    --transition-timing-function-spring-2: var(--ease-spring-2);
-    --transition-timing-function-spring-3: var(--ease-spring-3);
-    --transition-timing-function-spring-4: var(--ease-spring-4);
-    --transition-timing-function-spring-5: var(--ease-spring-5);
-  }
 }
