--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,6 +4,7 @@ import Whiteboard from "../components/heading/Whiteboard.astro";
 import WhiteboardContext from "../components/heading/WhiteboardContext.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import type { scope } from "simple:scope";
+import SquooshButton from "~/components/SquooshButton.astro";
 ---
 
 <BaseLayout title="About Ben">
@@ -74,40 +75,18 @@ import type { scope } from "simple:scope";
           >
         </p>
       </div>
-      <a
+      <SquooshButton
+        as="a"
+        class="mt-8 text-lg !text-white"
         href="https://www.youtube.com/@bholmesdev/shorts?sub_confirmation=1"
-        data-draw-btn
-        class="mt-12 text-white! group/btn mx-auto gap-4 text-center text-xl font-bold pb-2 px-1 no-underline block rounded-2xl transition-all"
       >
-        <span
-          class="origin-top rounded-xl px-8 py-3 flex items-center justify-center gap-4 group-active/btn:scale-x-[1.01] group-active/btn:scale-y-110 group-active/btn:rounded-2xl transition-all ease-spring-5 duration-500"
-        >
-          Watch some videos <Icon name="youtube" /></span
-        ></a
-      >
+        Watch some videos <Icon name="youtube" class="ml-1" />
+      </SquooshButton>
     </article>
   </main>
 </BaseLayout>
 
 <style>
-  [data-draw-btn] span {
-    background: linear-gradient(
-        288deg,
-        rgba(49, 62, 81, 0.2) 59.32%,
-        rgba(133, 155, 187, 0.2) 92.52%
-      ),
-      linear-gradient(129deg, #334155 27.53%, #303c4f 67.2%);
-  }
-  [data-draw-btn] span:hover {
-    filter: brightness(1.25);
-  }
-  [data-draw-btn] {
-    background: linear-gradient(139deg, #2f3d4f 23.15%, #131f31 74.32%);
-    transition:
-      transform 0.5s var(--ease-spring-4),
-      filter 0.3s;
-  }
-
   article :global(p) {
     line-height: 1.5;
     margin-block: 0.8rem;
